# Hand_Detection

./: .gitignore  README.md  Untitled.ipynb  calibration_notebook.ipynb  evaluate_results.ipynb  hand_dj.py  pipeline.sh  pipeline_mjx.sh  pipeline_osim.sh  populate_mjx.py  populate_pipeline.py  pyproject.toml  setup.py  smooth_ik_model_marker_locations.sto  test_dj.ipynb
hand_detection/: hand_dj.py
hand_detection/wrappers/: fit_analysis.py  hand_bbox.py  hand_estimation.py
hand_detection/wrappers/opensim/: OpenSim.ipynb  requirements.txt  scaleModel.py  utilsOpenSim.py
hand_detection/wrappers/opensim/Models/: 27IK.xml  27scales.xml  ARM_Hand_Wrist_Model.osim  markers.xml
scripts/: Untitled.ipynb  calibration_notebook.ipynb  pipeline.sh  populate_mjx.py  populate_osim.py  populate_pipeline.py  test_dj.ipynb
wrappers/: hand_bbox.py  hand_estimation.py
